[package]
name = "rust-postgres-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
deadpool-postgres = "0.10.5"
serde = {version = "1.0.152", features = ["derive"]}
tokio-postgres = "0.7.7"
